site spacing fixed

--- a/defender/src/components/ALPRDescription.css
+++ b/defender/src/components/ALPRDescription.css
@@ -1,7 +1,7 @@
 .alpr-description {
     background-color: #f9f9f9;
-    padding: 20px;
-    margin: 10px auto;
+    padding: 10px;
+    margin: 0 auto;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 800px;
