--- a/defender/src/components/MainContent.css
+++ b/defender/src/components/MainContent.css
@@ -2,6 +2,7 @@
 
 .main-content {
     padding: 20px;
+    padding-bottom: 0px;
     text-align: center;
   }
   
